# Pitchlens

./: .gitignore  README.md
backend/: .env.example  Dockerfile  app.py  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/models/: match.py
backend/app/routers/: matches.py
backend/app/services/: firestore_client.py  pipeline.py
backend/pipeline/: video_processor.py
backend/tests/: test_pipeline.py
firebase/: .firebaserc  firebase.json  firestore.indexes.json  firestore.rules  storage.rules
firebase/functions/: index.js  package.json
firebase/functions/src/: index.ts
frontend/: .env.example  .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/infer/: route.ts
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/[matchId]/: page.tsx
frontend/app/report/[matchId]/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: FootballHero.tsx  Footer.tsx  Navbar.tsx  PitchIllustration.tsx  PlayerRow.tsx  SkeletonDashboard.tsx  StatBar.tsx
frontend/components/auth/: AuthModal.tsx  AuthProvider.tsx
frontend/components/charts/: StatsCharts.tsx
frontend/components/pitch/: PitchSVG.tsx
frontend/components/ui/: Navbar.tsx  ThemeProvider.tsx
frontend/lib/: types.ts
frontend/lib/firebase/: auth.ts  config.ts  firestore.ts  storage.ts
frontend/lib/hooks/: useAuth.ts  useMatch.ts
frontend/lib/utils/: analytics.ts  videoProcessor.ts
